--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,9 +1,6 @@
 [theme]
-
-primaryColor = "#d33682"
-
-backgroundColor = "#002b36"
-
-secondarybackgroundColor = "#586e75"
-
-textColor = "#ffffff"
+primaryColor="#1f77b4"
+backgroundColor="#f5f5f5"
+secondaryBackgroundColor="#ffffff"
+textColor="#333333"
+font="serif"
